# Interpretable-Gearbox-Fault-Detection-KAN

./: .gitignore  01_data_preparation.py  02_feature_extraction.py  03_baseline_ml.py  04_kan_training.py  05_interpretability_and_pruning.py  06_paper_figures.py  Gearbox_Fault_Detection_Consolidated.ipynb  KAN_Autoencoder_Unsupervised_Feature_Selection.ipynb  KAN_Symbolic_Health_Equations.ipynb  KAN_Symbolic_Health_Equations.ipynb.bak  README.md  Unsupervised_Algorithms_Methodology.md  benchmark_inference.py  build_kan_ae_notebook.py  build_kan_symbolic_notebook.py  build_notebook.py  calculate_twonn_id.py  export_for_benchmark.py  future_work_research_plan.md  multi_seed_eval.py  paper_ICIEA2026.aux  paper_ICIEA2026.out  paper_ICIEA2026.tex  plot_ablation2.py  plot_fault_localisation.py  requirements.txt  sweep_supervised_44.py  unsupervised_01_data_split.py  unsupervised_02_baseline_ml.py  unsupervised_03_deep_learning.py  unsupervised_04_evaluation.py  unsupervised_05_advanced_dl.py
cpp_benchmark/: CMakeLists.txt  benchmark.cpp  build.sh  results_cpp_inference.csv  sym_eval.cpp  sym_eval.h
cpp_benchmark/exports/: ae.pt  dae.pt  if_trees.json  kan_ae.pt  kan_layer0.pt  kan_layers1to3.pt  lof_params.json  svdd.pt  svm_params.json  sym_layer0.json  sym_layer1.json  sym_layer2.json  sym_layer3.json  ts.pt  vae.pt
final_results/: 06_results_assembly.ipynb  RESEARCH_PAPER_DRAFT.md  claude_context.txt
model/: 0.1_cache_data  history.txt
model_1/: 0.0_config.yml  0.0_state  0.1_config.yml  0.1_state  kan_best_W600.pt  kan_best_W600_scaler.npy
results/: feature_importance_W300.csv  feature_importance_W600.csv  feature_importance_pruned_W300.csv  feature_importance_pruned_W400.csv  pruned_survivors_W400.csv  pruned_survivors_W500.csv
results_1/: baseline_accuracy.csv  baseline_f1.csv  baseline_precision.csv  baseline_recall.csv  baseline_results_detailed.csv  baseline_summary.csv  dl_accuracy.csv  dl_f1.csv  dl_precision.csv  dl_recall.csv  dl_results_detailed.csv  dl_summary.csv  feature_importance_W300.csv  feature_importance_W400.csv  feature_importance_W500.csv  feature_importance_W600.csv  feature_importance_W700.csv  feature_importance_W800.csv  pruned_survivors_W300.csv  pruned_survivors_W400.csv  pruned_survivors_W500.csv  pruned_survivors_W600.csv  pruned_survivors_W700.csv  pruned_survivors_W800.csv  pruning_validation_W300.csv  pruning_validation_W400.csv  pruning_validation_W500.csv  pruning_validation_W600.csv  pruning_validation_W700.csv  pruning_validation_W800.csv
results_kan_symbolic/: ablation_bottleneck.csv  ablation_table.csv  benchmark_auc.csv  edge_feature_importance.csv  fault_localization.csv  inference_benchmark.csv  kan_ae_symbolic.pt  lime_importance.csv  multi_seed_auc.csv  multi_seed_auc_full.csv  multi_seed_summary_full.csv  shap_importance.csv  symbolic_regression_results.csv
results_prev/: baseline_precision.csv  dl_accuracy.csv  dl_precision.csv  dl_recall.csv  feature_importance_W400.csv  feature_importance_W500.csv  feature_importance_W700.csv  feature_importance_W800.csv  feature_importance_pruned_W500.csv  feature_importance_pruned_W600.csv  feature_importance_pruned_W700.csv  feature_importance_pruned_W800.csv  pruned_survivors_W300.csv  pruned_survivors_W700.csv  pruned_survivors_W800.csv
results_unsupervised/: all_test_preds_W1000.csv  all_test_preds_W300.csv  all_test_preds_W400.csv  all_test_preds_W500.csv  all_test_preds_W600.csv  all_test_preds_W700.csv  all_test_preds_W800.csv  (+12 more)
(+59 files in other folders)
